--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
+<!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <title>Simple Interest Calculator</title>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
+            Amount <input type="number" style="border-radius: 4px" id="principal">  <br/>
+            Rate <input type="range" onchange="updateRate()"  id="rate" min="1" max="20" step="0.25" value="10.25">
+            <span id="rate_val" > </span><br/>
+            No. of Years <select name="age" style="border-radius: 4px" id="years" >
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                         </select><br/><br/>
+            <button class="button1" onclick="compute()">Compute Interest</button>
+            <span id="result">
+                <p id="amount1"></p>
+                <p id="amount2"></p>
+                <p id="amount3"></p>
+                <p id="amount4"></p>
+            </span><br/><br/>
+            <footer>
+                &#169; This Calculator belongs to EMDJ.
+            </footer>    
+
+        </div>
     </body>
 </html>
